# genesis

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: serializers.py
app/api/categories/: category_repository.py  category_router.py  category_schema.py  category_service.py
app/api/inventories/: inventory_repository.py  inventory_router.py  inventory_schema.py  inventory_service.py
app/api/products/: product_repository.py  product_router.py  product_schema.py  product_service.py
app/api/repositories/: base_repository.py
app/api/users/: user_repository.py  user_router.py  user_schema.py  user_service.py
app/api/variants/: variant_repository.py  variant_router.py  variant_schema.py  variant_service.py
app/core/: database.py  pymongo_object_id.py
app/dependencies/: service_dependency.py
app/repositories/: base_repository.py  category_repository.py  product_repository.py  user_repository.py
app/routers/: category_router.py  product_router.py  user_router.py
app/schemas/: category_schema.py  product_schema.py
app/services/: category_service.py  product_service.py  user_service.py
